infra_vm/manifests/my/observability/kibana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: ${NAMESPACE}
spec:
  ingressClassName: ${INGRESS_CLASS_NAME}
  rules:
    - host: kibana.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
